--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -25,4 +25,4 @@ jobs:
       with:
        context:
        push: true
-       tags: kicsipixel/githubaction:latest
+       tags: para92/webapp24:latest
